2003-01-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc: Refer to additions.
	* Documentation/BaseAdditions.gsdoc: New intorduction for additions
	* Headers/gnustep/base/GSCategories.h: Added MD5Digest NSData method
	* Source/DocMakefile: Build additions documentation separately
	* Source/Additions/GSCategories.m: Added MD5Digest NSData method
	* Source/Additions/GSMime.m: Use MD5Digest NSData method.

2003-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: ifdefed out my last change ...not sure
	it was good.
	* Source/GSFileHandle.m: Removed bogus semicolon which was causing
	code to be executed repeatedly rather than just once ... trivial
	optimisation.

2003-01-21  Adam Fedor  <fedor@gnu.org>

	* Source/Additions/(GCArray.m, GCDictionary.m, GCObject.m, 
	GSCategories.m): Include config.h
	* Source/Additions/GSMime.m: Add extra arg to some NSDebugMLog to
	get it to compile right on OSX.

2003-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/unicode/latin9.h: Latin9 string encoding tables
	* Source/Additions/Unicode.m: Added built-in support for the Latin9
	character encoding ... contains the Euro symbol ... nice for
	european users.
	* Source/NSArray.m: Make abstract copying implementation like that
	of latest MacOS-X rather than OPENSTEP ... no relationship between
	mutability and depth.
	* Source/NSDictionary.m: ditto
	* Source/NSSet.m: ditto
	* Source/GSArray.m: Implement optimised copies ... copying an immutable
	object just retains it, and copying a mutable object is shallow.
	* Source/GSDictionary.m: ditto
	* Source/GSSet.m: ditto

2003-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Support MacOS-X style initialisation using a path
	with a leading slash.

2003-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSCategories.m: Additional ([weekOfYear]) method
	for NSCalendarDate.
	* Headers/gnustep/base/GSCategories.h: ditto
